Version 0.62
	- [FF_CACHE input] New input module, designed to parse the cache files of Firefox. Contributed by John Ritchie
	- [L2T_PROCESS] Added a few more allowed characters in the keyword list
	- [proftpd_xferlog input] Willi Ballenthin added a new module to parse the ProFTPD XFerlog file
	- [Log2Timeline library] Fixed a bug, when the 'all' moduiles option is used (or -f is omitted) no modules get loaded
		Added a small change to try to parse the MFT directly even though the $MFT might not be directly visible
		Fixed a small bug whereas the tool would crash if the local timezone was used.
	- [EVTX input] Fixed a bug in where the tool could go into a endless loop in the case where you have a EVTX that is 
	somehow broken and the function get_next_event dies. If the tool runs into such occurance it returned an empty
	timestamp object, that in turn let the tool query for it again, thus possibly getting into an endless loop.
	Added a counter so the tool tries to get the next event 50 times, otherwise it will die.

Version 0.61 (26/09/2011)
	- [log2timeline] Small changes to the version printing (now prints just the last portion of the path)
		- Now the engine checks if the format field is set and omits it if its set (to facilitate input modules like CSV that define it)
		- Changed the list modules, added the SAM database readout in the winxp and win7 list files.
		- Created the winsrv list file
		- Added the MFT module to all windows list files (just in case they use a driver that displays the $MFT file)
		- Fixed an issue with the tool not accepting the described format of the offset variable (should be +- int with the appended hms (optional))
		- Added a try/catch around get_time, http://bugs.log2timeline.net/show_bug.cgi?id=2
	- [L2T_CSV input] Added an input module that reads the CSV format of log2timeline (done to make it easier to convert CSV files into another format)